Added Decoder, added pathEncoded, and fixed some encoding problems.